--- a/_includes/analytics.html
+++ b/_includes/analytics.html
@@ -14,3 +14,5 @@
 	</script>
 	<!-- End Google Analytics -->
 {% endif %}
+
+<a href="http://www.clustrmaps.com/map/rhapsodx.github.io" title="Visitor Map for rhapsodx.github.io"><img src="//www.clustrmaps.com/map_v2.png?u=C626&d=x-I9oiKV7oB85YPtXfhpW5arpWhNk1bf02yyDl4vzd0" /></a>
